Add School Enrollment and Classroom options
Updated entities, views, and controllers to include School Enrollment and Classroom tracking. Added School Languages and fixed Location views.

--- a/MEL.Web/Areas/Settings/Views/Home/Index.cshtml
+++ b/MEL.Web/Areas/Settings/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
                 <ul>
                     <li><a class='' asp-action='Index' asp-controller='SchoolTypes' asp-area='Settings'>School Types</a></li>
                     <li><a class='' asp-action='Index' asp-controller='SchoolLocations' asp-area='Settings'>School Locations</a></li>
+                    <li><a class='' asp-action='Index' asp-controller='SchoolLanguages' asp-area='Settings'>School Languages</a></li>
                     <li><a class='' asp-action='Index' asp-controller='SchoolAdministrationTypes' asp-area='Settings'>School Administration Types</a></li>
                     <li><a class='' asp-action='Index' asp-controller='SchoolStatus' asp-area='Settings'>School Status</a></li>
                     <li><a class='' asp-action='Index' asp-controller='SchoolClusters' asp-area='Settings'>School Clusters</a></li>
@@ -141,6 +142,7 @@
                 <h5 class="card-title">Teaching and Learning Materials Settings (TLM)</h5>
                 <ul>
                     <li><a class='' asp-action='Index' asp-controller='TLMDistributionStatus' asp-area='Settings'>TLM Distribution Status</a></li>
+                    <li><a class='' asp-action='Index' asp-controller='TLMMaterials' asp-area=''>TLM Materials</a></li>
                     <li><a class='' asp-action='Index' asp-controller='TLMMaterialTypes' asp-area='Settings'>TLM Material Types</a></li>
                     <li><a class='' asp-action='Index' asp-controller='TLMSubjects' asp-area='Settings'>TLM Subjects</a></li>
                     <li><a class='' asp-action='Index' asp-controller='TLMLanguages' asp-area='Settings'>TLM Languages</a></li>
