--- a/MEL.Web/Views/Home/AppStart.cshtml
+++ b/MEL.Web/Views/Home/AppStart.cshtml
@@ -44,7 +44,7 @@
             <p class="card-text">@Localizer["Read the user guides and documentation"].</p>
         </div>
         <div class="card-footer text-right">
-            <a href="https://github.com/edc-it/MEInsight/docs" class="btn btn-sm btn-primary"><i class="fas fa-info-circle pr-1"></i> @Localizer["Documentation"]</a>
+            <a href="https://github.com/edc-it/MEInsight/" class="btn btn-sm btn-primary"><i class="fas fa-info-circle pr-1"></i> @Localizer["Documentation"]</a>
         </div>
     </div>
 </div>
