--- a/MEL.Web/Views/Participants/Index.cshtml
+++ b/MEL.Web/Views/Participants/Index.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <input id="searchbox" type="text" class="form-control" placeholder='@Localizer["Search"]' aria-describedby="searchbox">
                 <div class="input-group-append">
-                    <button id="search-button" class="btn btn-sm btn-secondary" type="button" id="button-addon2">@Localizer["Search"]</button>
+                    <button id="search-button" class="btn btn-sm btn-secondary" type="button">@Localizer["Search"]</button>
                 </div>
             </div>
             <!--datatable search end-->
