--- a/MEL.Web/Views/Organizations/Create.cshtml
+++ b/MEL.Web/Views/Organizations/Create.cshtml
@@ -133,7 +133,7 @@
                             {
                                 <div class="form-group required">
                                     <label class="control-label">@item.LocationType</label>
-                                    <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" asp-items="@ViewBag.RefLocationId" required>
+                                    <select class="form-control" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" asp-items="@ViewBag.RefLocationId" required>
                                         <option disabled selected></option>
                                     </select>
                                     <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
@@ -145,7 +145,7 @@
                                 {
                                     <div class="form-group required">
                                         <label class="control-label">@item.LocationType</label>
-                                        <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
+                                        <select class="form-control" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
                                             <option disabled selected></option>
                                         </select>
                                         <span class="text-danger field-validation-valid" data-valmsg-for="RefLocationId" data-valmsg-replace="true"></span>
@@ -157,7 +157,7 @@
                                     {
                                         <div class="form-group required">
                                             <label class="control-label">@item.LocationType</label>
-                                            <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" required>
+                                            <select class="form-control" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" required>
                                                 <option disabled selected></option>
                                             </select>
                                             <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
@@ -167,7 +167,7 @@
                                     {
                                         <div class="form-group required">
                                             <label class="control-label">@item.LocationType</label>
-                                            <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
+                                            <select class="form-control" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
                                                 <option disabled selected></option>
                                             </select>
                                             <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
