--- a/MEL.Web/Views/Programs/Create.cshtml
+++ b/MEL.Web/Views/Programs/Create.cshtml
@@ -65,10 +65,10 @@
                 <!--input end-->
             </div>
 
-            <div class="form-group" asp-enabled="RefAttendanceUnitId">
+            <div class="form-group required" asp-enabled="RefAttendanceUnitId">
                 <!--fk select start-->
                 <label asp-for="RefAttendanceUnitId" class="control-label"></label>
-                <select asp-for="RefAttendanceUnitId" class="form-control custom-select" asp-items="ViewBag.RefAttendanceUnitId">
+                <select asp-for="RefAttendanceUnitId" class="form-control custom-select" asp-items="ViewBag.RefAttendanceUnitId" required>
                     <option disabled selected></option>
                 </select>
                 <span asp-validation-for="RefAttendanceUnitId" class="text-danger"></span>
