--- a/MEL.Web/Views/Programs/Edit.cshtml
+++ b/MEL.Web/Views/Programs/Edit.cshtml
@@ -65,10 +65,11 @@
                 <!--input end-->
             </div>
 
-            <div class="form-group" asp-enabled="RefAttendanceUnitId">
+            <div class="form-group required" asp-enabled="RefAttendanceUnitId">
                 <!--fk select start-->
                 <label asp-for="RefAttendanceUnitId" class="control-label"></label>
-                <select asp-for="RefAttendanceUnitId" class="form-control custom-select" asp-items="ViewBag.RefAttendanceUnitId">
+                <select asp-for="RefAttendanceUnitId" class="form-control custom-select" asp-items="ViewBag.RefAttendanceUnitId" required>
+                    <option disabled selected></option>
                 </select>
                 <span asp-validation-for="RefAttendanceUnitId" class="text-danger"></span>
                 <!--fk select end-->
@@ -96,6 +97,7 @@
                 <!--fk select start-->
                 <label asp-for="RefOrganizationTypeId" class="control-label"></label>
                 <select asp-for="RefOrganizationTypeId" class="form-control custom-select" asp-items="ViewBag.RefOrganizationTypeId">
+                    <option></option>
                 </select>
                 <span asp-validation-for="RefOrganizationTypeId" class="text-danger"></span>
                 <!--fk select end-->
