--- a/MEL.Web/Views/Organizations/Create.cshtml
+++ b/MEL.Web/Views/Organizations/Create.cshtml
@@ -56,7 +56,7 @@
                         <div class="form-group">
                             <label class="control-label">
                                 @Localizer["Create as Organization Unit?"]
-                                <i data-content="@Localizer["Set to 'Yes' if this organization unit will manage other organizations."]"
+                                <i data-content="@Localizer["Set to 'Yes' if this organization unit will manage other organizations. Set to 'No' if this organization will store groups of participants."]"
                                    data-placement="top"
                                    data-toggle="popover"
                                    data-container="body"
