--- a/MEL.Web/Views/Groups/Create.cshtml
+++ b/MEL.Web/Views/Groups/Create.cshtml
@@ -52,7 +52,7 @@
                 <!--fk select start-->
                 <label asp-for="RefGradeLevelId" class="control-label"></label>
                 <select asp-for="RefGradeLevelId" class="form-control custom-select" asp-items="ViewBag.RefGradeLevelId">
-                    <option disabled selected></option>
+                    <option></option>
                 </select>
                 <span asp-validation-for="RefGradeLevelId" class="text-danger"></span>
                 <!--fk select end-->
