--- a/MEL.Web/Views/Participants/Edit.cshtml
+++ b/MEL.Web/Views/Participants/Edit.cshtml
@@ -307,6 +307,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefStudentTypeId" class="control-label"></label>
                                     <select asp-for="RefStudentTypeId" class="form-control custom-select" asp-items="ViewBag.RefStudentTypeId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefStudentTypeId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -316,6 +317,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefStudentSpecializationId" class="control-label"></label>
                                     <select asp-for="RefStudentSpecializationId" class="form-control custom-select" asp-items="ViewBag.RefStudentSpecializationId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefStudentSpecializationId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -325,6 +327,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefStudentYearOfStudyId" class="control-label"></label>
                                     <select asp-for="RefStudentYearOfStudyId" class="form-control custom-select" asp-items="ViewBag.RefStudentYearOfStudyId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefStudentYearOfStudyId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -362,6 +365,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefTeacherTypeId" class="control-label"></label>
                                     <select asp-for="RefTeacherTypeId" class="form-control custom-select" asp-items="ViewBag.RefTeacherTypeId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefTeacherTypeId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -371,6 +375,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefTeacherPositionId" class="control-label"></label>
                                     <select asp-for="RefTeacherPositionId" class="form-control custom-select" asp-items="ViewBag.RefTeacherPositionId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefTeacherPositionId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -380,6 +385,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefTeacherEmploymentTypeId" class="control-label"></label>
                                     <select asp-for="RefTeacherEmploymentTypeId" class="form-control custom-select" asp-items="ViewBag.RefTeacherEmploymentTypeId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefTeacherEmploymentTypeId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -416,6 +422,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefEducationAdministratorTypeId" class="control-label"></label>
                                     <select asp-for="RefEducationAdministratorTypeId" class="form-control custom-select" asp-items="ViewBag.RefEducationAdministratorTypeId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefEducationAdministratorTypeId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -425,6 +432,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefEducationAdministratorPositionId" class="control-label"></label>
                                     <select asp-for="RefEducationAdministratorPositionId" class="form-control custom-select" asp-items="ViewBag.RefEducationAdministratorPositionId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefEducationAdministratorPositionId" class="text-danger"></span>
                                     <!--fk select end-->
@@ -434,6 +442,7 @@
                                     <!--fk select start-->
                                     <label asp-for="RefEducationAdministratorOfficeId" class="control-label"></label>
                                     <select asp-for="RefEducationAdministratorOfficeId" class="form-control custom-select" asp-items="ViewBag.RefEducationAdministratorOfficeId">
+                                        <option disabled selected></option>
                                     </select>
                                     <span asp-validation-for="RefEducationAdministratorOfficeId" class="text-danger"></span>
                                     <!--fk select end-->
