--- a/MEL.Web/Views/Participants/Create.cshtml
+++ b/MEL.Web/Views/Participants/Create.cshtml
@@ -62,7 +62,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group required" asp-enabled="RefParticipantCohortId">
+                    <div class="form-group" asp-enabled="RefParticipantCohortId">
                         <!--fk select start-->
                         <label asp-for="RefParticipantCohortId" class="control-label"></label>
                         <select asp-for="RefParticipantCohortId" class="form-control custom-select" asp-items="ViewBag.RefParticipantCohortId">
