Fix incorrect datatables folder name
#8

--- a/MEInsight.Web/Views/Shared/_ListScriptsPartial.cshtml
+++ b/MEInsight.Web/Views/Shared/_ListScriptsPartial.cshtml
@@ -8,7 +8,7 @@
         function getDataTablesLanguage() {
             var cultureInfo = '@System.Globalization.CultureInfo.CurrentCulture.TwoLetterISOLanguageName';
             if (cultureInfo) {
-                var path = '/lib/datatables.net/i18n/' + cultureInfo + '.json';
+                var path = '/lib/datatables/i18n/' + cultureInfo + '.json';
             }
             return path;
         }
