--- a/MEInsight.Web/Views/Shared/_NavigationMenu.cshtml
+++ b/MEInsight.Web/Views/Shared/_NavigationMenu.cshtml
@@ -10,13 +10,13 @@
     Guid? userOrganizacionId = (await UserManager.GetUserAsync(User))?.OrganizationId;
 
     <li class="nav-item @Html.IsSelected(controller: "Organizations")">
-        <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="Organizations" asp-action="Index">
+        <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="Organizations" asp-action="Index" asp-area="">
             @Localizer["Enrollments"]
         </a>
     </li>
 
     <li class="nav-item @Html.IsSelected(controller: "Participants")">
-        <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="Participants" asp-action="Index">
+        <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="Participants" asp-action="Index" asp-area="">
             @Localizer["Participants"]
         </a>
     </li>
@@ -29,7 +29,7 @@
     *@
 
     <li asp-enabled="menuTLM" class="nav-item @Html.IsSelected(controller: "TLMDistributions") @Html.IsSelected(controller: "TLMDistributionDetails") @Html.IsSelected(controller: "TLMDistributionPeriods")">
-        <a class="nav-link text-white" asp-controller="TLMDistributionPeriods" asp-action="Index" title="Teaching and Learning Materials">
+        <a class="nav-link text-white" asp-controller="TLMDistributionPeriods" asp-action="Index" title="Teaching and Learning Materials" asp-area="">
             @Localizer["TLM"]
         </a>
     </li>
