Migrated Bootstrap v4 to v5 - fix date-picker
Fixed classes for bootstrap date-picker
Fixed missing locale for bootstrap date-picker

--- a/MEInsight.Web/wwwroot/css/site.css
+++ b/MEInsight.Web/wwwroot/css/site.css
@@ -245,7 +245,7 @@ body {
         background-image: none;
     }
 
-div.input-group.date span.input-group-append {
+div.input-group.date span.input-group-addon {
     cursor: pointer;
 }
 
